--- a/menu.css
+++ b/menu.css
@@ -4,13 +4,14 @@
 	position:fixed;
 	top:0px;
 	width:100%;
-	background-color:black;
+	height:40px;
+	background:black;
 	text-align:center;
 	color:white;
-	transition: background-color 0.4s;
+	transition: background 1s;
 }
 
 .menu1:hover{
-	background-color:#333;
+	background:#333;
 }
 
